# softjax-presentation

./: .gitignore  README.md  lowres_render.sh  pdf.sh  present.sh  presentation.py  pyproject.toml  render.sh
